# synthspan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: entities.csv  quickstart.py  templates.txt
src/synthspan/: __init__.py  augment.py  balance.py  cli.py  cluster.py  gazetteer.py  generate.py  template.py  types.py  typos.py  writers.py
src/synthspan/llm/: __init__.py  backends.py  generate.py
tests/: test_augment.py  test_cluster.py  test_core.py  test_integration.py  test_llm.py
